# custom-proc-macros

./: Cargo.toml
crates/custom_macros/: Cargo.toml
crates/custom_macros/src/: lib.rs
crates/lib1/src/: lib.rs
crates/lib2/src/: lib.rs
examples/: builder.rs
src/: main.rs
